# neural-network-from-scratch

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.project-context/: 00_inventory.md  01_repository_map.md  02_component_decomposition.md  03_cross_component_flows.md  04_config_and_environment.md  05_external_integrations.md  06_database_and_persistence.md  07_operational_model.md  08_testing_and_quality.md  09_security_and_risk.md  10_architecture_review.md  11_duplication_and_abstraction_review.md  12_open_questions.md  13_final_report.md
.project-context/components/: data-and-persistence.qa.md  data-and-persistence.reader.md  documentation-assets.qa.md  documentation-assets.reader.md  interactive-cli-checkpoints.qa.md  interactive-cli-checkpoints.reader.md  neural-network-core.qa.md  neural-network-core.reader.md  package-config-entrypoints.qa.md  package-config-entrypoints.reader.md  tests.qa.md  tests.reader.md  training-visualization.qa.md  training-visualization.reader.md
.project-context/traces/: background_jobs.md  data_flow.md  destructive_operations.md  external_calls.md  important_runtime_flows.md  persistence_paths.md  startup_flow.md
data/mnist/: SHA256SUMS
scripts/: verify_mnist.py
src/neural_network_from_scratch/: __init__.py  __main__.py  activations.py  checkpoints.py  cli.py  data.py  layers.py  network.py  rendering.py  settings.py  train.py  visual_train.py
tests/: test_activations.py  test_checkpoints.py  test_cli.py  test_data_loading.py  test_network.py  test_rendering.py  test_training.py
