[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neural-network-from-scratch"
version = "0.1.0"
description = "A from-scratch NumPy neural network for MNIST digit classification."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "rich",
]

[project.scripts]
nnfs = "neural_network_from_scratch.cli:main"
nnfs-train = "neural_network_from_scratch.train:main"
nnfs-visual = "neural_network_from_scratch.visual_train:main"

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
